fix: stretch main content area on mobile to display 3 columns

--- a/pages/meme_manager/css/sidebar.css
+++ b/pages/meme_manager/css/sidebar.css
@@ -208,6 +208,7 @@
 @media (max-width: 992px) {
   .workspace-layout {
     flex-direction: column-reverse;
+    align-items: stretch;
   }
 
   .tags-sidebar {
@@ -228,6 +229,9 @@
 }
 
 @media (max-width: 768px) {
+  .main-workspace {
+    width: 100%;
+  }
   .mobile-sidebar-toggle-btn {
     display: inline-flex !important;
     align-items: center;
